kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fintech-service
  labels:
    app: fintech-app
spec:
  selector:
    app: fintech-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
